<resources>
    <string name="app_name">CAB</string>

    <string name="driver">i`m a driver</string>
    <string name="customer">i`m a customer</string>

    <string name="driver_login">Driver Login</string>
    <string name="customer_login">Customer Login</string>
    <string name="email">Email…</string>
    <string name="password">Password…</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="driver_register">Driver Register</string>
    <string name="customer_register">Customer Register</string>

    <string name="driver_registration">Driver Registration</string>
    <string name="customer_registration">Customer Registration</string>


</resources>
