<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logreg"
    tools:context=".DriverLoginRegisterActivity">

    <TextView
        android:id="@+id/customer_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customer_email"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp"
        android:text="@string/driver_login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/customer_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_email"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/customer_login_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/customer_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@android:color/holo_orange_light"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/customer_register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/customer_register_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/customer_register_link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/register"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

</RelativeLayout>